--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -13,7 +13,37 @@
       <meta name="description" content="" />
       <link rel="stylesheet" href="./assets/style.css" />
       <script src="./assets/index.js" defer></script>
+      <script
+         src="https://kit.fontawesome.com/ca3ba5c2f6.js"
+         crossorigin="anonymous"
+      ></script>
    </head>
+
+   <div class="edition hide">
+      <a class="editionButton">
+         <i class="fa-regular fa-pen-to-square"></i>
+         <p>Mode édition</p>
+      </a>
+   </div>
+
+   <div class="modalContainer hide">
+      <div id="modal1" class="modal">
+         <span><i class="fa-solid fa-xmark"></i></span>
+         <h2>Galerie photo</h2>
+         <div class="modalGallery"></div>
+         <button class="buttonModal">Ajouter une photo</button>
+      </div>
+      <div id="modal2" class="modal hide">
+         <span><i class="fa-solid fa-arrow-left"></i></span>
+         <span><i class="fa-solid fa-xmark"></i></span>
+         <h2>Ajout photo</h2>
+         <div class="addPhoto"></div>
+         <h3>Titre</h3>
+         <h3>Catégorie</h3>
+         <button>Valider</button>
+      </div>
+   </div>
+
    <body>
       <header>
          <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
@@ -21,7 +51,7 @@
             <ul>
                <li>projets</li>
                <li>contact</li>
-               <li>login</li>
+               <li><a id="headerLogin" href="login.html">login</a></li>
                <li>
                   <img src="./assets/icons/instagram.png" alt="Instagram" />
                </li>
