--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -12,7 +12,7 @@
       />
       <meta name="description" content="" />
       <link rel="stylesheet" href="./assets/style.css" />
-      <script src="./assets/index.js" defer></script>
+      <script src="./assets/login.js" defer></script>
    </head>
    <body>
       <header>
@@ -31,12 +31,16 @@
       <main>
          <section class="login">
             <h2>Log in</h2>
-            <form method="post" action="#" class="login-form">
+            <p></p>
+            <form method="post" class="login-form">
                <label for="email">E-mail</label>
                <input type="email" id="email" />
                <label for="password">Mot de passe</label>
                <input type="password" id="password" />
-               <button>Se connecter</button>
+               <div id="erreurMessage">
+                  Votre mot de passe n'est pas correct
+               </div>
+               <button id="buttonLogin">Se connecter</button>
             </form>
             <a href="#">Mot de passe oublié</a>
          </section>
