--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -54,7 +54,9 @@
                <select id="category" required></select>
             </div>
          </div>
-         <button id="validAddPhotoButton" class="buttonModal">Valider</button>
+         <button id="validAddPhotoButton" class="buttonModal buttonModalGrey">
+            Valider
+         </button>
       </div>
    </div>
 
